k8s/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: suvisdev
spec:
  replicas: 0
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin-data
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: suvisdev
spec:
  type: LoadBalancer   # 호스트에서 localhost:5050
  selector:
    app: pgadmin
  ports:
    - port: 5050
      targetPort: 80
